@@ -1,3 +1,8 @@
+2008-03-24  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* generic/tclBinary.c: bug #1923966 - crash in binary format
+	* tests/binary.test:   Added tests for the above crash condition.
+
 2008-03-11  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tclMacOSXNotify.c: avoid using CoreFoundation after fork() on
